# codechatagent

./: .env.example  .gitignore  WEAVIATE_INTEGRATION.md  check_weaviate.py  docker-compose.yml  examples.py  pyproject.toml  readme.md  setup-weaviate.sh
.github/: copilot-instructions.md
configdb/: keyfile
src/code_chat_agent/: __init__.py  agent.py  cli.py  embeddings.py  indexer.py  mongo_store.py  parser.py  retriever.py  weaviate_store.py
tests/: test_agent.py  test_embeddings.py  test_indexer.py  test_mongo_store.py  test_parser.py  test_retriever.py  test_vector_store.py  test_weaviate_store.py
